@@ -7,8 +7,8 @@ if (TYPO3_MODE == 'BE') {
 		// add module
 	t3lib_extMgm::insertModuleFunction(
 		'web_info',
-		'tx_linkvalidator_modfunc1',
-		t3lib_extMgm::extPath('linkvalidator') . 'modreport/class.tx_linkvalidator_modfunc1.php',
+		'tx_linkvalidator_modreport',
+		t3lib_extMgm::extPath('linkvalidator') . 'modreport/class.tx_linkvalidator_modreport.php',
 		'LLL:EXT:linkvalidator/locallang.xml:mod_linkvalidator'
 	);
 }
